# opencv_practice

./: CMakeLists.txt  README.md
res/: CMakeLists.txt
src/: CMakeLists.txt  blob_detection.cpp  blob_detection_dev.cpp  circle_gaussian.cpp  face_detect_webcam.cpp  face_detection.cpp  openimg.cpp
